--- a/doc-independent-build.yaml
+++ b/doc-independent-build.yaml
@@ -14,7 +14,7 @@ jenkins_job_priority: 90
 jenkins_job_timeout: 30
 notifications:
   emails:
-  - ros-buildfarm-testfarm@googlegroups.com
+  - mike.karamousadakis@twi.gr
 targets:
   ubuntu:
     trusty:
