--- a/indigo/release-build.yaml
+++ b/indigo/release-build.yaml
@@ -8,7 +8,7 @@ jenkins_source_job_priority: 81
 jenkins_source_job_timeout: 30
 notifications:
   emails:
-  - ros-buildfarm-testfarm@googlegroups.com
+  - mike.karamousadakis@twi.gr
   maintainers: false
 sync:
   package_count: 2000
