--- a/indigo/source-build.yaml
+++ b/indigo/source-build.yaml
@@ -7,7 +7,7 @@ jenkins_pull_request_job_priority: 61
 notifications:
   committers: false
   emails:
-  - ros-buildfarm-testfarm@googlegroups.com
+  - mike.karamousadakis@twi.gr
   maintainers: false
 repositories:
   keys:
