--- a/jade/source-build.yaml
+++ b/jade/source-build.yaml
@@ -7,7 +7,7 @@ jenkins_pull_request_job_priority: 60
 notifications:
   committers: false
   emails:
-  - ros-buildfarm-testfarm@googlegroups.com
+  - mike.karamousadakis@twi.gr
   maintainers: false
 repositories:
   urls:
