--- a/kinetic/doc-released-build.yaml
+++ b/kinetic/doc-released-build.yaml
@@ -6,7 +6,7 @@ jenkins_job_priority: 89
 jenkins_job_timeout: 30
 notifications:
   emails:
-  - ros-buildfarm-testfarm@googlegroups.com
+  - mike.karamousadakis@twi.gr
 targets:
   ubuntu:
     xenial:
