add proper credential ID

--- a/index.yaml
+++ b/index.yaml
@@ -105,4 +105,4 @@ status_page_repositories:
   - http://repo.thlrnd.com/ubuntu/main
 type: buildfarm
 version: 1
-git_ssh_credential_id: mikekaram_twi
+git_ssh_credential_id: 1e7d4696-7fd4-4bc6-8c87-ebc7b6ce16e5
