--- a/indigo/source-build.yaml
+++ b/indigo/source-build.yaml
@@ -9,6 +9,11 @@ notifications:
   emails:
   - mike.karamousadakis@twi.gr
   maintainers: false
+repository_whitelist:
+  - ardrone_autonomy
+  - darknet
+  - gazebo_ros
+skip_ignored_repositories: true
 repositories:
   keys:
   - |
