--- a/doc-independent-build.yaml
+++ b/doc-independent-build.yaml
@@ -15,6 +15,11 @@ jenkins_job_timeout: 30
 notifications:
   emails:
   - mike.karamousadakis@twi.gr
+package_whitelist:
+  - ardrone_autonomy
+  - darknet
+  - gazebo_ros
+skip_ignored_packages: true
 targets:
   ubuntu:
     trusty:
