--- a/jade/release-armhf-build.yaml
+++ b/jade/release-armhf-build.yaml
@@ -10,6 +10,11 @@ notifications:
   emails:
   - mike.karamousadakis@twi.gr
   maintainers: false
+package_whitelist:
+  - ardrone_autonomy
+  - darknet
+  - gazebo_ros
+skip_ignored_packages: true
 package_blacklist:
   - ardrone_autonomy
   - avt_vimba_camera
