--- a/melodic/release-armhf-build.yaml
+++ b/melodic/release-armhf-build.yaml
@@ -11,9 +11,10 @@ notifications:
   - mike.karamousadakis@twi.gr
   maintainers: false
 package_whitelist:
-  - ardrone_autonomy
-  - darknet
-  - gazebo_ros
+  - catkin
+  - abb_driver
+  - gencpp
+  - genmsg
 skip_ignored_packages: true
 package_blacklist:
   - octovis
