--- a/melodic/doc-released-build.yaml
+++ b/melodic/doc-released-build.yaml
@@ -9,12 +9,8 @@ jenkins_job_timeout: 30
 notifications:
   emails:
   - mike.karamousadakis@twi.gr
-package_whitelist:
-  - catkin
-  - abb_driver
-  - gencpp
-  - genmsg
-skip_ignored_packages: true
+tag_whitelist:
+  - thlrnd
 targets:
   ubuntu:
     bionic:
