--- a/melodic/release-armhf-build.yaml
+++ b/melodic/release-armhf-build.yaml
@@ -10,12 +10,8 @@ notifications:
   emails:
   - mike.karamousadakis@twi.gr
   maintainers: false
-package_whitelist:
-  - catkin
-  - abb_driver
-  - gencpp
-  - genmsg
-skip_ignored_packages: true
+tag_whitelist:
+  - thlrnd
 package_blacklist:
   - octovis
   - ueye
