--- a/index.yaml
+++ b/index.yaml
@@ -28,6 +28,21 @@ distributions:
     source_builds:
       default: melodic/source-build.yaml
 #      ds: melodic/source-stretch-build.yaml
+  noetic:
+    doc_builds:
+      default: noetic/doc-build.yaml
+      released-packages-without-doc-job: noetic/doc-released-build.yaml
+    notification_emails:
+    - mike.karamousadakis@twi.gr
+    release_builds:
+      default: noetic/release-build.yaml
+#      db: noetic/release-buster-build.yaml
+#      dbv8: noetic/release-buster-arm64-build.yaml
+      ufhf: noetic/release-armhf-build.yaml
+#      ufv8: noetic/release-arm64-build.yaml
+    source_builds:
+      default: noetic/source-build.yaml
+#      db: noetic/source-buster-build.yaml
 doc_builds:
   independent-packages: doc-independent-build.yaml
 jenkins_url: https://buildfarm.thlrnd.com
