disable collate_test_stats

--- a/noetic/source-build.yaml
+++ b/noetic/source-build.yaml
@@ -5,7 +5,7 @@ build_environment_variables:
   ROS_PYTHON_VERSION: 3
 tag_whitelist:
   - thlrnd
-collate_test_stats: true
+collate_test_stats: false
 jenkins_commit_job_priority: 54
 jenkins_job_timeout: 120
 jenkins_pull_request_job_priority: 44
